--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "description": "",
   "main": "all.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "deploy": "webpack --mode production"
+    "dev": "webpack serve",
+    "build": "webpack",
+    "deploy":"webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.1",
+    "postcss": "^8.4.19",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "tailwind": "^4.0.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
+    "tailwind": "^4.0.0"
   }
 }
