--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack serve",
     "build": "webpack",
-    "deploy":"webpack --mode production"
+    "deploy": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "tailwind": "^4.0.0"
   }
 }
